--- a/pages/standings/standings.module.scss
+++ b/pages/standings/standings.module.scss
@@ -1,5 +1,103 @@
+.standings :global {
+  animation: 120s hex-scroll infinite linear;
+}
 .standings {
-  p {
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  transition: background 2s ease;
+  background: url("./hexagon.svg"), 
+      linear-gradient(0deg, rgb(0, 0, 0) 0%, rgb(48, 98, 136) 20%, rgb(2 75 132 / 62%) 50%, rgb(10 131 224 / 40%) 90%, rgb(148, 209, 255, 0.6) 100%, #ffffff 100%);
+
+  & * {
+    user-select: none;
+  }
+
+  & > p {
+    font-family: 'Montserrat', sans-serif;
     margin: 0;
+
+    &:first-child {
+      width: 100%;
+      line-height: 200px;
+      font-size: 100px;
+      text-align: center;
+      font-weight: 500;
+    }
+  }
+
+  & > div {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+    padding-bottom: 100px;
+  }
+}
+
+@media screen and (min-width: 1900px) {
+    .standings > div {
+      max-height: 800px;
+      align-content: space-around;
+    }
+}
+
+.team {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  height: 100px;
+  width: 600px;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 2px 2px 10px black;
+  margin: 20px;
+
+  & > img {
+    height: 100px;
+  }
+}
+
+.logo {
+  margin-left: -20px !important;
+}
+
+.flexCol {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+}
+
+.teamname {
+  width: 250px;
+  color: white;
+  & p {
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+  }
+  & > p:first-child {
+    font-size: 32px;
+    font-weight: 700;
+  }
+  & > p:last-child {
+    font-size: 24px;
+    font-weight: 500;
+  }
+}
+
+.record {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+
+  & p {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 48px;
+    font-weight: bolder;
+    text-align: center;
   }
 }
