--- a/pages/schedule/schedule.module.scss
+++ b/pages/schedule/schedule.module.scss
@@ -1,5 +1,85 @@
+.schedule :global {
+  animation: 120s hex-scroll infinite linear;
+}
 .schedule {
-  p {
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  transition: background 2s ease;
+  background: #fff;
+ // background: url("./hexagon.svg"), 
+  //    linear-gradient(0deg, rgb(0, 0, 0) 0%, rgb(48, 98, 136) 20%, rgb(2 75 132 / 62%) 50%, rgb(10 131 224 / 40%) 90%, rgb(148, 209, 255, 0.6) 100%, #ffffff 100%);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  scroll-behavior: smooth;
+
+  & * {
+    user-select: none;
     margin: 0;
   }
+}
+
+@media (max-width: 670px) {
+  .allWeeks {
+    display: none !important;
+  }
+  .weeks {
+    margin-left: 0px !important;
+  }
+}
+
+.allWeeks {
+  height: 100vh;
+  width: 200px;
+  margin-left: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  p {
+    border-left: 1px solid #333;
+    margin: 0;
+    padding: 10px;
+  }
+}
+
+.weeks {
+  margin-left: 200px;
+}
+
+.week {
+  width: 100%;
+  min-width: 600px;
+
+  .weekHeader {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: black;
+    color: white;
+    height: 70px;
+    font-family: 'Montserrat';
+
+    & > div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 24px;
+    }
+
+    & > div:first-child {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 16px;
+    }
+  }
+}
+
+.weekMatches {
+  
 }
