--- a/pages/standings/standings.module.scss
+++ b/pages/standings/standings.module.scss
@@ -8,6 +8,10 @@
   transition: background 2s ease;
   background: url("./hexagon.svg"), 
       linear-gradient(0deg, rgb(0, 0, 0) 0%, rgb(48, 98, 136) 20%, rgb(2 75 132 / 62%) 50%, rgb(10 131 224 / 40%) 90%, rgb(148, 209, 255, 0.6) 100%, #ffffff 100%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 
   & * {
     user-select: none;
@@ -35,31 +39,37 @@
   }
 }
 
-@media screen and (min-width: 1900px) {
-    .standings > div {
-      max-height: 800px;
-      align-content: space-around;
-    }
-}
-
 .team {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  height: 100px;
-  width: 600px;
-  border-radius: 20px;
+  height: 70px;
+  min-width: 600px;
   overflow: hidden;
-  box-shadow: 2px 2px 10px black;
-  margin: 20px;
+  //border-bottom: 1px solid black;
+  align-items: center;
 
   & > img {
-    height: 100px;
+    height: 50px;
+    width: 50px;
   }
-}
 
-.logo {
-  margin-left: -20px !important;
+  & > p:first-child {
+    width: 60px;
+    font-size: 40px;
+    margin: 10px;
+    line-height: 50px;
+    text-align: center;
+  }
+
+  &:nth-child(n) {
+    background-color: #fffc;
+    color: black;
+  }
+  &:nth-child(2n) {
+    background-color: #cccc;
+    color: black;
+  }
 }
 
 .flexCol {
@@ -86,18 +96,63 @@
   }
 }
 
-.record {
+.stats {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
-  width: 200px;
+  width: 400px;
 
   & p {
     font-family: 'Montserrat', sans-serif;
-    font-size: 48px;
+    font-size: 28px;
     font-weight: bolder;
     text-align: center;
+    width: 110px;
+  }
+}
+
+.teamheader {
+  display: flex;
+  flex-direction: row;
+  background-color: black;
+  color: white;
+
+  & > div:not(:last-child) {
+    & p {
+      font-family: 'Montserrat', sans-serif;
+      font-size: 18px;
+      text-align: center;
+      font-weight: bolder;
+    }
+  }
+
+  & > div:last-child {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 400px;
+    margin-left: auto;
+  
+    & p {
+      font-family: 'Montserrat', sans-serif;
+      font-size: 18px;
+      text-align: center;
+      width: 110px;
+      font-weight: bolder;
+    }
+  }
+}
+
+.teamName {
+  font-family: 'Montserrat';
+  font-size: 20px;
+  margin: 0;
+  margin-left: 10px;
+  &:first-child {
+    font-weight: bolder;
   }
 }
