--- a/pages/standings/standings.module.scss
+++ b/pages/standings/standings.module.scss
@@ -1,17 +1,6 @@
-.standings :global {
-  animation: 120s hex-scroll infinite linear;
-}
 .standings {
   width: 100%;
   height: 100%;
-  min-height: 100vh;
-  transition: background 2s ease;
-  background: url("./hexagon.svg"), 
-      linear-gradient(0deg, rgb(0, 0, 0) 0%, rgb(48, 98, 136) 20%, rgb(2 75 132 / 62%) 50%, rgb(10 131 224 / 40%) 90%, rgb(148, 209, 255, 0.6) 100%, #ffffff 100%);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
 
   & * {
     user-select: none;
@@ -31,11 +20,8 @@
   }
 
   & > div {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-content: center;
-    padding-bottom: 100px;
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -102,7 +88,7 @@
   flex-wrap: nowrap;
   justify-content: space-evenly;
   align-items: center;
-  width: 400px;
+  margin-left: auto;
 
   & p {
     font-family: 'Montserrat', sans-serif;
@@ -134,12 +120,11 @@
     flex-wrap: nowrap;
     justify-content: space-evenly;
     align-items: center;
-    width: 400px;
     margin-left: auto;
   
     & p {
       font-family: 'Montserrat', sans-serif;
-      font-size: 18px;
+      font-size: 24px;
       text-align: center;
       width: 110px;
       font-weight: bolder;
