before working on build errors

--- a/pages/momentum-tracker/momentum-tracker.module.scss
+++ b/pages/momentum-tracker/momentum-tracker.module.scss
@@ -13,6 +13,16 @@ $lightBlue: #6CADDF;
   align-items: center;
 }
 
+.row {
+  width: 100%;
+  flex-direction: row;
+}
+
+.column {
+  width: 100%;
+  flex-direction: column;
+}
+
 .lightText {
   color: white;
 }
